src/styles.scss
$appPrimary: #3f51b5;
$appPrimaryDark: #303f9f;
$appAccent: #ff4081;
$appToolbarBackground: #1c9d12;
$websitePrimary: #1c9d12;

$primary: $appToolbarBackground;
$color-mode-type: 'media-query';

@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
@import "bootstrap/scss/bootstrap";
@import "bootstrap-icons/font/bootstrap-icons";

html, body {
  height: 100%;
}

.btn-floating-action {
  position: fixed;
  bottom: 2rem;
  right: 2rem;
}

.visible-hover {
  visibility: hidden;
}

:hover > .visible-hover {
  visibility: unset;
}

:hover + .visible-hover {
  visibility: unset;
}

@media (hover: none) {
  .visible-hover {
    visibility: unset;
  }
}

//Hide Arrow From Input Box
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

/* Add this CSS to your component's styles or in your global stylesheet */
.data-collector-item {
  list-style-type: none; /* Remove the dot before the checkbox */
  padding: 5px; /* Add some padding for better spacing */
}


// ------------------- Auth Cards ---------------------

.auth-card {
  color: white;
  border: none;
  width: 500px;
  padding:40px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: hsla(205, 46%, 30%, 1);
  background: linear-gradient(90deg, hsla(205, 46%, 30%, 1) 0%, hsla(260, 29%, 36%, 1) 100%);
}

/* Media query for mobile screens */
@media (max-width: 768px) {
  .auth-card {
    padding: 10px; /* Adjust the padding for smaller screens */
    width: 90%; /* Adjust the width for smaller screens */
  }
}

